Fix wrong font being passed through

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -5,6 +5,7 @@
 @font-face {
     font-family: 'Montserrat';
     src: url('/fonts/Montserrat/static/Montserrat-SemiBold.ttf');
+    font-weight: 600;
 }
 
 @font-face {
