--- a/src/css/output.css
+++ b/src/css/output.css
@@ -781,6 +781,8 @@ video {
   font-family: 'Montserrat';
 
   src: url('/fonts/Montserrat/static/Montserrat-SemiBold.ttf');
+
+  font-weight: 600;
 }
 
 @font-face {
